WebCore/bindings/js/JSConsoleCustom.cpp
@@ -74,6 +74,12 @@ JSValue* JSConsole::dirxml(ExecState* exec, const ArgList& arguments)
     return jsUndefined();
 }
 
+JSValue* JSConsole::trace(ExecState* exec, const ArgList&)
+{
+    impl()->trace(exec);
+    return jsUndefined();
+}
+
 JSValue* JSConsole::assertCondition(ExecState* exec, const ArgList& arguments)
 {
     ArgList messageParameters;
